objects/POA__c.object
<CustomObject>
    <description>used to handle Plan of Action items for an Account- gives the ability to group support or implementation issues together</description>
    <fields>
        <fullName>AC_PS_Intro_Call__c</fullName>
        <description>Haystak field when was intro call made to dealer</description>
        <label>AC/PS Intro Call</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AIS_DESKING__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AIS – DESKING</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AIS_WEBSITE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AIS – WEBSITE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AM_Team_Name__c</fullName>
        <formula>Owner:User.Team_Name__c</formula>
        <inlineHelpText>formula field that reads the team name from the poa owner&apos;s profile</inlineHelpText>
        <label>AM Team Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATC_Contact_Name__c</fullName>
        <label>ATC Contact Name</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATC_Contact_Phone__c</fullName>
        <label>ATC Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Account_ALERT__c</fullName>
        <description>Pulled from the Account&apos;s ALERT field</description>
        <formula>Dealer__r.ALERT__c</formula>
        <inlineHelpText>Pulled from the Account&apos;s ALERT field</inlineHelpText>
        <label>Account ALERT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Adwords_ID_s__c</fullName>
        <description>Haysak</description>
        <formula>&quot;ADWORDS ID 1:&quot; &amp; Dealer__r.Adwords_CID__c &amp; BR() 
&amp; &quot;ADWORDS ID 2:&quot; &amp; Dealer__r.Adwords_CID_2__c &amp; BR() 
&amp; &quot;ADWORDS ID 3:&quot; &amp; Dealer__r.Adwords_CID_3__c &amp; BR() 
&amp; &quot;ADWORDS ID 4:&quot; &amp; Dealer__r.Adwords_CID_4__c &amp; BR() 
&amp; &quot;ADWORDS ID 5:&quot; &amp; Dealer__r.Adwords_CID_5__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>read only field that display the values from the same field on the account. Fields can only be updated on the account and will refresh automatically to this field</inlineHelpText>
        <label>Account Adwords ID&apos;s</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Billing_State__c</fullName>
        <formula>Dealer__r.BillingCity &amp; &quot;, &quot; &amp; Dealer__r.BillingState</formula>
        <inlineHelpText>formula field that brings over the Account&apos;s Billing City and Billing State</inlineHelpText>
        <label>Billing Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Bing_Ids__c</fullName>
        <description>Haystak</description>
        <formula>&quot;BING ID 1:&quot; &amp; Dealer__r.Bing_Id_1__c  &amp; BR() 
&amp; &quot;BING ID 2:&quot; &amp; Dealer__r.Bing_Id_2__c  &amp; BR() 
&amp; &quot;BING ID 3:&quot; &amp; Dealer__r.Bing_Id_3__c  &amp; BR() 
&amp; &quot;BING ID 4:&quot; &amp; Dealer__r.Bing_Id_4__c  &amp; BR() 
&amp; &quot;BING ID 5:&quot; &amp; Dealer__r.Bing_Id_5__c</formula>
        <inlineHelpText>read only formula field that displays the same field values from the accounnt.  fields can only be updated on the account and will automatically refresh to the POA</inlineHelpText>
        <label>Account Bing Ids</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Director_Email__c</fullName>
        <formula>Account_Director__r.Email</formula>
        <label>Account Director Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>POA_AD_s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Group__c</fullName>
        <label>Account Group</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_ID__c</fullName>
        <formula>Dealer__r.Id</formula>
        <label>Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <description>This holds the Account OwnerId; Creating this to compare when creating Accont Team Members;</description>
        <formula>Dealer__r.OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Account Owner</inlineHelpText>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Paid_Ops_Settings__c</fullName>
        <formula>&quot;SEM COMPETITORS&gt;&gt;&quot; &amp; 
Dealer__r.Competitors__c &amp; BR() &amp; &quot; &quot;&amp; BR()&amp; 
&quot;SEO COMPETITORS&gt;&gt;&quot; &amp; 
Dealer__r.SEO_Competitors__c &amp; BR() &amp; &quot; &quot;&amp; BR()&amp; 
&quot;SEM CITIES IN GEO&gt;&gt;&quot; 
&amp; Dealer__r.Cities_in_Geo__c &amp; BR() &amp; &quot; &quot;&amp; BR()&amp; 
&quot;SEO CITIES IN GEO&gt;&gt;&quot; 
&amp; Dealer__r.SEO_Cities_in_Geo__c &amp; BR() &amp; &quot; &quot;&amp; BR()&amp; 
&quot;ALIAS&gt;&gt;&quot; 
&amp; Dealer__r.Alias__c &amp; BR() &amp; &quot; &quot;&amp; BR()&amp; 
&quot;TAGLINES/SLOGANS/SIGNATURES&gt;&gt;&quot; 
&amp;Dealer__r.Taglines_Slogan__c</formula>
        <inlineHelpText>read only formula field that reads Paid Ops settings from the account</inlineHelpText>
        <label>Account Paid Ops Settings</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Phone_Number__c</fullName>
        <formula>Dealer__r.Phone</formula>
        <label>Account Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Physical_Location__c</fullName>
        <formula>Dealer__r.ShippingStreet &amp;&quot;, &quot;&amp; Dealer__r.ShippingCity &amp;&quot;, &quot;&amp; Dealer__r.ShippingState &amp;&quot;, &quot;&amp; Dealer__r.ShippingPostalCode</formula>
        <inlineHelpText>formula field that reads the shipping address from the account page</inlineHelpText>
        <label>Account Physical Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Region__c</fullName>
        <formula>Dealer__r.Territory_Name__c</formula>
        <label>Account Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Tech_Ops_Settings__c</fullName>
        <formula>&quot;MARCHEX ID&gt;&gt;&quot;&amp;Dealer__r.Marchex_Id__c 
&amp; BR()&amp; &quot; &quot;&amp; BR()&amp; &quot; &quot;&amp; 

&quot;KENSHOO TRACKING ID&gt;&gt;&quot; &amp; 
Dealer__r.Kenshoo_Tracking_ID__c 
&amp; BR()&amp; &quot; &quot;&amp; BR()&amp; &quot; &quot;&amp; 

&quot;CLIENT UA&gt;&gt;&quot; &amp; 
Dealer__r.Client_UA_Code__c 
&amp; BR()&amp; &quot; &quot;&amp; BR()&amp; &quot; &quot;&amp; 

&quot;HAYSTAK UA&gt;&gt;&quot;&amp; 
Dealer__r.Haystak_UA_Code__c 
&amp; BR()&amp; &quot; &quot;&amp; BR()&amp; &quot; &quot;&amp; 

&quot;TARGET PHONE#&gt;&gt;&quot; &amp; 
Dealer__r.Target_Phone__c 
&amp; BR()&amp; &quot; &quot;&amp; BR()&amp; &quot; &quot;&amp; 

&quot;WEBSITE PROVIDER&gt;&gt;&quot; &amp;  
    Dealer__r.Website_Provider_Haystak__c   
&amp; BR()&amp; &quot; &quot;&amp; BR()&amp; &quot; &quot;&amp;

&quot;WEBSITE USERNAME&gt;&gt;&gt;&gt;&quot; &amp;  
    Dealer__r.Website_Provider_Username__c  
&amp; BR()&amp; &quot; &quot;&amp; BR()&amp; &quot; &quot;&amp;

&quot;WEBSITE PASSWORD&gt;&gt;&quot; &amp;  
    Dealer__r.Website_Provider_Password__c   
&amp; BR()&amp; &quot; &quot;&amp; BR()&amp; &quot; &quot;&amp;
&quot;INVT FEED PROVIDER&gt;&gt;&quot; &amp;  
   Dealer__r.Inventory_Feed_Provider__c  
&amp; BR()&amp; &quot; &quot;&amp; BR()&amp; &quot; &quot;&amp;
&quot;SALES LEAD EMAIL&gt;&gt;&quot; &amp; 
Dealer__r.Sales_Lead_Email_Address__c</formula>
        <inlineHelpText>Read Only Formula field that displays Tech Ops Account Fields</inlineHelpText>
        <label>Account Tech Ops Settings</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Value__c</fullName>
        <formula>Dealer__r.Account_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_VinPro__c</fullName>
        <formula>Owner:User.User_Full_Name__c</formula>
        <inlineHelpText>formula field that pulls the POA Owner</inlineHelpText>
        <label>Performance Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acct_Manager_Changed_on__c</fullName>
        <description>Used by Haystak to track when an Acct Manager was changed on a POA</description>
        <inlineHelpText>When was the Acct Manager last updated?</inlineHelpText>
        <label>Acct Manager Changed on?</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Acquisition_Pro__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Acquisition Pro</label>
        <referenceTo>User</referenceTo>
        <relationshipName>POAs2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active_Users__c</fullName>
        <description>The number of users that are enabled in the vAuto web application</description>
        <formula>Dealer__r.Active_Users__c</formula>
        <inlineHelpText>The number of users that are enabled in the vAuto web application</inlineHelpText>
        <label># Active Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Activity_Count__c</fullName>
        <label>Activity Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Advertising_End_Date__c</fullName>
        <label>Advertising End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Age_Current_Prior_IAR__c</fullName>
        <description>Haystak</description>
        <formula>IF( 
OR(ISBLANK( Last_Utilization_Review__c),ISBLANK( Prior_Utilization_Review__c )) , Null,Last_Utilization_Review__c - Prior_Utilization_Review__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Haystak - time between last Utilization Review and Prior Utilization Review Dates</inlineHelpText>
        <label>Age (Current/Prior IAR)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Alternate_Start_Date__c</fullName>
        <inlineHelpText>This alternate start date will push out the due dates for the milestones. Only editable by the VP of Implementation and Support.</inlineHelpText>
        <label>Alternate Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Avg_Days_Inv__c</fullName>
        <description>The field would be from the app – named ‘average days in inventory’ from the ‘investment summary’ tab of the home page. 
To be used for retail ONLY and for used ONLY.</description>
        <label>Avg Days Inv</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Backend_Password__c</fullName>
        <inlineHelpText>used by Haystak for SEO</inlineHelpText>
        <label>Backend Password</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Backend_Provider__c</fullName>
        <inlineHelpText>used by Haystak -enter the web address of the backend provider</inlineHelpText>
        <label>Backend Provider</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Backend_Username__c</fullName>
        <inlineHelpText>used by Haystak</inlineHelpText>
        <label>Backend Username</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billed_Recurring_Revenue__c</fullName>
        <description>The billed monthly recurring revenue on THIS rooftop ONLY. Does not calculate the entire auto group.</description>
        <formula>Dealer__r.VinSolutions_Spend__c</formula>
        <inlineHelpText>The billed monthly recurring revenue on THIS rooftop ONLY. Does not calculate the entire auto group.</inlineHelpText>
        <label>Billed Recurring Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billing_Type__c</fullName>
        <description>Pulled from the Account&apos;s Billing Type field, which is updated by MotoSnap</description>
        <formula>TEXT(Dealer__r.Billing_Type__c)</formula>
        <inlineHelpText>Pulled from the Account&apos;s Billing Type field which is NO LONGER updated monthly by the Motosnap billing breakdown report.</inlineHelpText>
        <label>Billing Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <formula>CASE(
   RecordType.DeveloperName,
   &quot;Vin_Account_Mgmt&quot;, &quot;VinSolutions&quot;,
   &quot;Account_Mgmt_POA&quot;, &quot;VinSolutions&quot;,
   &quot;AutoTrader&quot;, &quot;VinSolutions&quot;,
   &quot;CRM_Followup&quot;, &quot;VinSolutions&quot;,
   &quot;Cancellation&quot;, &quot;VinSolutions&quot;,
   &quot;Implementation&quot;, &quot;VinSolutions&quot;,
   &quot;New_Account_Follow_up&quot;, &quot;VinSolutions&quot;,
   &quot;New_Website_Followup&quot;, &quot;VinSolutions&quot;,
   &quot;Support&quot;, &quot;VinSolutions&quot;,
   &quot;VinSocial&quot;, &quot;VinSolutions&quot;,
   &quot;Vin Analytics&quot;, &quot;VinSolutions&quot;,
   &quot;Vin Behavioral&quot;,&quot;VinSolutions&quot;,
   &quot;New_Website_POA&quot;, &quot;VinSolutions&quot;,
   &quot;Haystak_SEM&quot;, &quot;Haystak&quot;,
   &quot;Haystak_SEO&quot;, &quot;Haystak&quot;,
   &quot;Haystak&quot;, &quot;Haystak&quot;,
   &quot;vAuto&quot;,&quot;vAuto&quot;,
   &quot;Haystak_Search_Essentials&quot;, &quot;Haystak&quot;,
   &quot;NOT DEFINED - SEE ADMIN&quot;
)</formula>
        <inlineHelpText>What BU controls this record. Set by Record Type.</inlineHelpText>
        <label>Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CALL_TRACKING__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CALL TRACKING</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CHAT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CHAT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Vendor__c</fullName>
        <label>CRM Vendor</label>
        <picklist>
            <picklistValues>
                <fullName>ADP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autobase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoSoft / Traffic Cop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car-Research XRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DealerPeak</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DealerSocket</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DealerTrack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dominion (AVV)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eLead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Higher Gear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iMagic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ProMax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reynolds and Reynolds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VinSolutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CRM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cancellation_Effective_Date__c</fullName>
        <inlineHelpText>Haystak field for account management. Last day Fees will be charged (Typically 30 days after Cancellation Notice is received).</inlineHelpText>
        <label>Fee End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cancellation_Name__c</fullName>
        <formula>TEXT(Cancellation_Effective_Date__c) &amp;&quot;-&quot;&amp;  Dealer__r.Name &amp;&quot;-&quot;&amp;  RecordType.Name</formula>
        <inlineHelpText>formula field that concatenates the dealer name, cancellation effective date and product.  Used for Haystak Reporting</inlineHelpText>
        <label>Cancellation Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancellation_Notes__c</fullName>
        <description>Any additional information regarding this accounts cancellation.</description>
        <inlineHelpText>Additional Information regarding this customer&apos;s request to cancel service.</inlineHelpText>
        <label>Cancellation Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cancellation_Notification_Date__c</fullName>
        <label>Cancellation Notification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Case_Count__c</fullName>
        <label>Case Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Client_Approval_Needed__c</fullName>
        <description>Haystak Field</description>
        <formula>TEXT(Dealer__r.Client_Approval_Needed__c)</formula>
        <inlineHelpText>Formula field looks up to the Account Page.</inlineHelpText>
        <label>Client Approval Needed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Goal__c</fullName>
        <label>Client Goal</label>
        <picklist>
            <picklistValues>
                <fullName>Goal 1 - CPA, VDP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goal 2 - Sales, Data Emphasis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goal 3 - Market Dominance, Steady Metrics, Multi-Channel Ads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goal 4 -  Unclear or Undefined Goals</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client_Goals__c</fullName>
        <label>Client Goals</label>
        <picklist>
            <picklistValues>
                <fullName>Goal 1 - CPA, VDP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goal 2 - Sales, Data Emphasis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goal 3 - Market Dominance, Steady Metrics, Multi-Channel Ads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goal 4 -  Unclear or Undefined Goals</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client_Intro_Call__c</fullName>
        <description>Haystak field for tracking</description>
        <label>Client Intro Call</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <label>Competitor</label>
        <picklist>
            <picklistValues>
                <fullName>AdPearance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CF Search Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cobalt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goodway Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L2T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mudd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NetSertive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pixel Motion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reach Local</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Search Optics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Showroom</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Compliance_Visual__c</fullName>
        <description>Haystak</description>
        <formula>IF( 
OR( 
AND(ISPICKVAL( Preferred_Frequency_of_Contact__c , &quot;Monthly&quot;),Last_Solid_Engagement_Age__c &gt; 30), 
AND(ISPICKVAL( Preferred_Frequency_of_Contact__c , &quot;Weekly&quot;),Last_Solid_Engagement_Age__c &gt; 7), 
AND(ISPICKVAL( Preferred_Frequency_of_Contact__c , &quot;Bi-Weekly&quot;), Last_Solid_Engagement_Age__c &gt; 14),
ISBLANK( Last_Solid_Engagement__c ) 
), 
IMAGE(&quot;/servlet/servlet.ImageServer?id=01570000001UBKB&amp;oid=00D700000008zHZ&amp;lastMod=1425083417000&quot;, &quot;Red&quot;), 
IMAGE(&quot;/servlet/servlet.ImageServer?id=015700000021RyM&amp;oid=00D700000008zHZ&amp;lastMod=1418162444000&quot;, &quot;Green&quot;, 10,10))</formula>
        <inlineHelpText>formula field that shows a graphic related to whether the solid engagement status is on track or needs attention</inlineHelpText>
        <label>Haystak LSE Alert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conquest_Activation_Date__c</fullName>
        <formula>Dealer__r.Conquest_Activation_Date__c</formula>
        <inlineHelpText>formula field that reads the Conquest Activation date from the Account.  to change the Conquest activation date, please go to the account</inlineHelpText>
        <label>Conquest Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Conquest_LSE_Age__c</fullName>
        <formula>IF( 
ISNULL(  Conquest_LSE__c  ), NULL, Today()- Conquest_LSE__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>formula field that calculates the age of the LSE from Today less last Conquest Solid Engagement logged, othewise if no last solid engagement date is present, the value is null</inlineHelpText>
        <label>Conquest LSE Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Conquest_LSE_Priority__c</fullName>
        <formula>IF(
 ISBLANK(Conquest_Activation_Date__c)&amp;&amp;  ISBLANK(Conquest_Status__c), NULL,
IF(
Conquest_Status__c = &quot;Pending Launch Approval&quot;, &quot;High&quot;,
IF(
Conquest_Status__c = &quot;At Risk&quot;, &quot;High&quot;,
IF(
Conquest_Status__c = &quot;Pending Needs Training&quot;, &quot;Low&quot;,
IF(
Conquest_Status__c = &quot;Pending Needs Data&quot;, &quot;Low&quot;,
&quot;No Status&quot;)))))</formula>
        <inlineHelpText>formula field that reads the values of the conquest status and converts them to High or Low</inlineHelpText>
        <label>Conquest LSE Priority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conquest_LSE_Status2__c</fullName>
        <formula>IF( Conquest_PM_Needed__c = &quot;NO PM&quot; , 
NULL, 
IF(Conquest_Status__c = &quot;Churned&quot;,
NULL,
IF( 
OR( 
AND( Conquest_LSE_Priority__c != &quot;High&quot;,  Conquest_LSE_Age__c  &gt; 30), 
AND(Conquest_LSE_Priority__c = &quot;High&quot;, Conquest_LSE_Age__c &gt; 7), 
AND(ISBLANK(Conquest_Status__c)), 
AND( ISBLANK( Conquest_LSE__c )) 
), 
&quot;Schedule Call&quot;, 
&quot;On Schedule&quot; 
)))</formula>
        <inlineHelpText>formula field that displays graphics into text for the status of the Conquest Last Solid Engagement</inlineHelpText>
        <label>Conquest LSE Status2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conquest_LSE_Status__c</fullName>
        <formula>IF(  Conquest_PM_Needed__c = &quot;NO PM&quot; ,
NULL,

IF( 
OR( 
AND( Conquest_LSE_Priority__c != &quot;High&quot;,  Conquest_LSE_Age__c  &gt; 30), 
AND(Conquest_LSE_Priority__c = &quot;High&quot;,  Conquest_LSE_Age__c  &gt; 7), 
AND(ISBLANK(Conquest_Status__c)), 
AND( ISBLANK( Conquest_LSE__c )) 
), 


IMAGE(&quot;/servlet/servlet.ImageServer?id=01570000001UBKB&amp;oid=00D700000008zHZ&amp;lastMod=1425083417000&quot;, &quot;Red&quot;), 
IMAGE(&quot;/servlet/servlet.ImageServer?id=015700000021RyM&amp;oid=00D700000008zHZ&amp;lastMod=1418162444000&quot;, &quot;Green&quot;, 10,10) 
))</formula>
        <inlineHelpText>formula field that looks at the Conquest LSE Priority, Conquest Status and Conquest LSE to determine whether the last solid engagement is on time or past due</inlineHelpText>
        <label>Conquest LSE Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conquest_LSE__c</fullName>
        <inlineHelpText>Updated when the Last SE Date is updated in the Product Status List</inlineHelpText>
        <label>Conquest LSE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Conquest_MRR__c</fullName>
        <formula>Dealer__r.Conquest_MRR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>formula field that reads the same field on the related account</inlineHelpText>
        <label>Conquest MRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Conquest_PM_Needed__c</fullName>
        <formula>CASE( Conquest_Status__c , 
&quot;&quot;, &quot;NO PM&quot;,
&quot;Churned&quot;, &quot;NO PM&quot;, 
&quot;Pending Needs  Data&quot;, &quot;NO PM&quot;,
&quot;Pending Needs Training&quot;,&quot;NO PM&quot;,
&quot;Pending Needs Data&quot;, &quot;NO PM&quot;,
&quot;Prospect&quot;, &quot;NO PM&quot;,
&quot;PM&quot;)</formula>
        <inlineHelpText>hidden formula field that is part of calculating the Conquest Status</inlineHelpText>
        <label>Conquest PM Needed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conquest_Price_Changes__c</fullName>
        <description># Conquest price changes for dealers with Conquest</description>
        <formula>Dealer__r.Conquest_price_changes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText># Conquest price changes for dealers with Conquest</inlineHelpText>
        <label># Conquest Price Changes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Conquest_Status_Count__c</fullName>
        <formula>IF( Conquest_LSE_Status2__c = &quot;On Schedule&quot;, True, False)</formula>
        <inlineHelpText>hidden formula field used for reporting</inlineHelpText>
        <label>Conquest Status Count</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conquest_Status__c</fullName>
        <inlineHelpText>Updated when the Product Status is updated in the Product Status List</inlineHelpText>
        <label>Conquest Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conquest_Type__c</fullName>
        <formula>TEXT( Dealer__r.vAuto_Conquest_type__c)</formula>
        <inlineHelpText>formula field that reads the Conquest Type field from the account.  you edit this field from the account</inlineHelpText>
        <label>Conquest Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <description>Used by Haystak to note when service was terminated with this customer</description>
        <inlineHelpText>What was the last day of service for this customer?</inlineHelpText>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <description>Used by Haystak to note on the POA when service began for this customer</description>
        <inlineHelpText>When did service start for this customer</inlineHelpText>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Conversion_Type__c</fullName>
        <description>Workflow sets this field from a Closed/Won VinSolutions Opportunity when either the Lead Source or Secondary Lead Source = DT/DDC Conversion or DT/DDC Conversion - New Customer.</description>
        <formula>TEXT(Dealer__r.Conversion_Type__c)</formula>
        <inlineHelpText>Workflow sets this field from a Closed/Won VinSolutions Opportunity when either the Lead Source or Secondary Lead Source = DT/DDC Conversion or DT/DDC Conversion - New Customer.</inlineHelpText>
        <label>Conversion Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Created_Date__c</fullName>
        <formula>Dealer__r.Created_Date__c</formula>
        <inlineHelpText>field from the Account - Also known as &apos;Sold Date&apos;. The date of the first time an opportunity was marked paid for this client.</inlineHelpText>
        <label>Customer Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DATA_APPENDS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DATA APPENDS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DATA_INTEGRATION__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DATA INTEGRATION</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DESKING__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DESKING</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DIGITAL_MARKETING__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DIGITAL MARKETING</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMS_Feed_Date__c</fullName>
        <label>DMS Feed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dashboard_Views__c</fullName>
        <label>Dashboard Views</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_Handoff_Complete__c</fullName>
        <label>Data Extract Handoff Complete</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_Completed__c</fullName>
        <inlineHelpText>updated by workflow</inlineHelpText>
        <label>Date Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_PM_Was_changed__c</fullName>
        <inlineHelpText>Updated by workflow when the POA owner is changed</inlineHelpText>
        <label>Date PM Was changed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Packet_Sent__c</fullName>
        <description>Haystak tracking field</description>
        <label>Date Packet Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Packet_Verified__c</fullName>
        <description>Haystak Tracking Field</description>
        <label>Date Packet Verified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Proposal_Sent__c</fullName>
        <description>Date Proposal Sent</description>
        <label>Date Proposal Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Saved__c</fullName>
        <label>Date Saved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Talked_to_Client_RE_Vin__c</fullName>
        <label>Date Client Shown the Integration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Open__c</fullName>
        <formula>IF(  ISPICKVAL(Status__c, &quot;Closed Resolved&quot;) || (ISPICKVAL(Status__c, &quot;Closed Lost&quot; )) || (ISPICKVAL(Status__c, &quot;Completed&quot; )), null,Now()- CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>formula field that looks at the status and if the status does not contain closed it keeps track of days open by taking the Today less the Created Date</inlineHelpText>
        <label>Days Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Until_Next_Visit__c</fullName>
        <description>The number of days until the next onsite visit</description>
        <formula>Next_Visit_Date__c - TODAY()</formula>
        <inlineHelpText>The number of days until the next onsite visit</inlineHelpText>
        <label>Days Until Next Visit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Completion__c</fullName>
        <description>If Date Completed is present, show the amount of days between Date Completed and the Created Date.</description>
        <formula>IF(
   !ISBLANK(Date_Completed__c),
   Date_Completed__c - DATEVALUE(CreatedDate),
   null
)</formula>
        <inlineHelpText>If Date Completed is present, show the amount of days between Date Completed and the Created Date.</inlineHelpText>
        <label>Days to Completion</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>